added all skills

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
           <option value="6">Squared Away</option>
           <option value="-3">Jitters</option>
           <option value="6">Cross Training</option>
+		  <option value="3">Zippo</option>
+		  <option value="2">Rocketeer</option>
+		  <option value="5">Shooter</option>
+		  <option value="4">Ballistics</option>
+		  <option value="4">Splash Damage</option>
+		  <option value="2">Bolt Action</option>
+		  <option value="2">Warm-Blooded</option>
       </select>
       <br>
 
