--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
@@ -38,16 +38,24 @@
 	
 	</div>
 	</div>
-	<div id="summary">
+	<div class="row">
+		<div class="col-lg-offset-1 col-lg-1 col-sm-offset-1 col-sm-1"></div>
+
+    <div class="col-lg-3 col-sm-3"> 
 		<p id="result">
 		Your total points: 0
 		</p>
+	</div>
+	<div class="col-lg-3 col-sm-3">
 		<p id="max_loadout">
 		Your max loadout: 0
 		</p>
+	</div>
+	<div class="col-lg-3 col-sm-3">
 		<p id="current_loadout">
 		Your current loadout: 0
 		</p>
+	</div>
     </div>
 	<div class="row">
 	<div class="col-lg-offset-1 col-lg-1 col-sm-offset-1 col-sm-1"></div>
