more layout fixes

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                     font-size: 14px;
                 }
                 #summary {
-                    padding-left: 30%;
                     font-weight: bold;
-                    font-size: 12px;
                 }
 				.col-lg-4 {
 				border:1px solid black;
@@ -38,20 +36,21 @@
 	
 	</div>
 	</div>
+	<br>
 	<div class="row">
 		<div class="col-lg-offset-1 col-lg-1 col-sm-offset-1 col-sm-1"></div>
 
-    <div class="col-lg-3 col-sm-3"> 
+    <div class="col-lg-3 col-sm-3" id="summary"> 
 		<p id="result">
 		Your total points: 0
 		</p>
 	</div>
-	<div class="col-lg-3 col-sm-3">
+	<div class="col-lg-3 col-sm-3" id="summary">
 		<p id="max_loadout">
 		Your max loadout: 0
 		</p>
 	</div>
-	<div class="col-lg-3 col-sm-3">
+	<div class="col-lg-3 col-sm-3" id="summary">
 		<p id="current_loadout">
 		Your current loadout: 0
 		</p>
